<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@mipmap/ic_beijing"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_update_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_des_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_20"
                android:text="68%的用户"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/font_14" />

            <TextView
                android:id="@+id/tv_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_des_tittle"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginTop="8dp"
                android:maxLines="5"
                android:text=""
                android:textColor="@color/color_666666"
                android:textSize="@dimen/font_14" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/progressbar_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_update_view"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical"
            android:visibility="gone"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/updatting"
                android:textColor="@color/color_349AF3"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/update_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:text=""
                android:textColor="@color/color_65B0F3"
                android:textSize="@dimen/font_14" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/margin_15"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_updating_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/cancel"
                android:textColor="@color/color_65B0F3"
                android:textSize="@dimen/font_18" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ifupdate_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_update_view"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_25"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_update_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/ic_anniu"
                android:gravity="center"
                android:text="@string/update_now"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/tv_cancel_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/update_cancel"
                android:textColor="@color/color_308CDD"
                android:textSize="@dimen/font_16" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>