<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
>
    <include layout="@layout/head_layout"/>

    <TextView
        android:id="@+id/tv_bind_wx_get_nick"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/bg_button_blue"
        android:gravity="center"
        android:text="绑定微信，自动获取头像昵称"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
    />

    <RelativeLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"
    >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/person_gray"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="13.5dp"
            android:layout_marginTop="10.5dp"
            android:text="@string/mine_head"
            android:textColor="@color/person_title"
            android:textSize="16sp"
        />
        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:background="@mipmap/inviting_friends_logo"
        />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_nick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"
    >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/person_gray"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="13.5dp"
            android:layout_marginTop="10.5dp"
            android:text="@string/mine_nick_name"
            android:textColor="@color/person_title"
            android:textSize="16sp"
        />

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="13.5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10.5dp"
            android:layout_toLeftOf="@+id/iv_nick"
            android:text="ban"
            android:textColor="@color/person_content"
            android:textSize="16sp"
        />
        <ImageView
            android:id="@+id/iv_nick"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/home_ce_more"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_bind_wx"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/person_gray"
        />
        <ImageView
            android:id="@+id/iv_bind_wx"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/home_ce_more"
        />

        <TextView
            android:id="@+id/tv_bind_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="13.5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10.5dp"
            android:layout_toLeftOf="@+id/iv_bind_wx"
            android:text="已绑定"
            android:textColor="@color/person_content"
            android:textSize="16sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="13.5dp"
            android:layout_marginTop="10.5dp"
            android:text="@string/mine_bind_wx"
            android:textColor="@color/person_title"
            android:textSize="16sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/person_gray"
    />
    <RelativeLayout
        android:id="@+id/ll_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_login_pwd"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/home_ce_more"
        />

        <TextView
            android:id="@+id/tv_login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="13.5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10.5dp"
            android:layout_toLeftOf="@+id/iv_login_pwd"
            android:text="未设置"
            android:textColor="@color/person_content"
            android:textSize="16sp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="13.5dp"
            android:layout_marginTop="10.5dp"
            android:text="@string/mine_login_pwd"
            android:textColor="@color/person_title"
            android:textSize="16sp"/>
    </RelativeLayout>

</LinearLayout>